# vizzpy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
examples/: vizzpy_call_tree.md  vizzpy_call_tree_functions.md  vizzpy_call_tree_modules.md
tests/: test_cli.py  test_graph.py  test_project.py  test_render.py  test_server.py  test_walker.py
vizzpy/: cli.py  graph.py  render.py  server.py
vizzpy/parser/: project.py  scope.py  walker.py
vizzpy/static/: app.js  index.html  style.css
